vlib/v/checker/tests/return_missing_nested.out
vlib/v/checker/tests/return_missing_nested.vv:3:1: error: missing return at end of function `foo`
    1 | fn main() {}
    2 |
    3 | fn foo() string {
      | ~~~~~~~~~~~~~~~
    4 |     if true {
    5 |         return ''